2007-08-20  Andrew Pinski  <andrew_pinski@playstation.sony.com>

PR middle-end/30564
        * tree-inline.c (optimize_inline_calls): Move the cgraph checking
        code in front of the compacting of basic blocks.
        Move the folding of statements inbetween the cgraph checking
        and compacting of basic blocks.

2007-08-20  Andrew Pinski  <andrew_pinski@playstation.sony.com>

        PR middle-end/30564
        * gcc.c-torture/compile/pr30564-1.c: New test.
        * gcc.c-torture/compile/pr30564-2.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@127638 138bc75d-0d04-0410-961f-82ee72b054a4